<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_first_text"
        android:textSize="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_tex"
        android:textSize="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"

        />
    <TextView
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text_three"
        android:textSize="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"

        />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text_four"
        android:textSize="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"

        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text_six"
        android:textSize="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"

        />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text_six"
        android:textSize="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"

        />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text_seven"
        android:textSize="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"

        />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text_eight"
        android:textSize="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"

        />


</LinearLayout>